# OpenSandbox

./: .gitignore  README.md  pyproject.toml
docs/: PROVENANCE.md
dt_arena/config/: env.yaml  mcp.yaml
dt_arena/envs/arxiv/: docker-compose-hub.yml  docker-compose.yml
dt_arena/envs/atlassian/: docker-compose-hub.yml  docker-compose.yml
dt_arena/envs/bigquery/: docker-compose.yml
dt_arena/envs/calendar/: docker-compose-hub.yml  docker-compose.yml
dt_arena/envs/custom-website/: docker-compose.yml
dt_arena/envs/customer_service/: docker-compose.yml
dt_arena/envs/databricks/: docker-compose-hub.yml  docker-compose.yml
dt_arena/envs/gmail/: docker-compose-hub.yml  docker-compose.yml
dt_arena/envs/google-form/: docker-compose-hub.yml  docker-compose.yml
dt_arena/envs/googledocs/: docker-compose-hub.yml  docker-compose.yml
dt_arena/envs/macos/: docker-compose.yml
dt_arena/envs/os-filesystem/: docker-compose-hub.yml  docker-compose.yml
dt_arena/envs/paypal/: docker-compose-hub.yml  docker-compose.yml
dt_arena/envs/salesforce_crm/: docker-compose-hub.yaml  docker-compose.yaml
dt_arena/envs/slack/: docker-compose-hub.yml  docker-compose.yml
dt_arena/envs/snowflake/: docker-compose-hub.yml  docker-compose.yml
dt_arena/envs/telecom/: docker-compose-hub.yml  docker-compose.yml
dt_arena/envs/telegram/: docker-compose-hub.yml  docker-compose.yml
dt_arena/envs/terminal/: docker-compose-hub.yml
dt_arena/envs/travel/: docker-compose.yml
dt_arena/envs/whatsapp/: docker-compose-hub.yml  docker-compose.yml
dt_arena/envs/windows/: docker-compose.yml
dt_arena/envs/zoom/: docker-compose-hub.yml  docker-compose.yml
dt_arena/mcp_server/atlassian/: main.py  pyproject.toml
dt_arena/mcp_server/bigquery/: main.py  pyproject.toml
dt_arena/mcp_server/browser/: config.json  pyproject.toml
dt_arena/mcp_server/calendar/: main.py  pyproject.toml
dt_arena/mcp_server/customer_service/: main.py  pyproject.toml
dt_arena/mcp_server/databricks/: main.py  pyproject.toml
dt_arena/mcp_server/gmail/: main.py  pyproject.toml
dt_arena/mcp_server/google_form/: main.py  pyproject.toml
dt_arena/mcp_server/googledocs/: main.py  pyproject.toml
dt_arena/mcp_server/macos/: pyproject.toml
dt_arena/mcp_server/os-filesystem/: main.py  pyproject.toml
dt_arena/mcp_server/salesforce/: main.py  pyproject.toml
dt_arena/mcp_server/slack/: main.py
dt_arena/mcp_server/snowflake/: main.py  pyproject.toml
dt_arena/mcp_server/telecom/: mcp_server.py
dt_arena/mcp_server/telegram/: main.py  pyproject.toml
dt_arena/mcp_server/terminal/: main.py  pyproject.toml
dt_arena/mcp_server/travel/: mcp_server.py
dt_arena/mcp_server/whatsapp/: main.py  pyproject.toml
dt_arena/mcp_server/windows/: mcp_server.py  pyproject.toml
dt_arena/mcp_server/zoom/: main.py  pyproject.toml
opensandbox/: __init__.py  cli.py  config.py  runtime.py
seeds/: README.md
