[project]
name = "calendar-mcp"
version = "0.1.0"
description = "Calendar MCP Server for Google Calendar Sandbox"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp==2.13.0.2",
    "mcp>=1.17.0",
    "uvicorn[standard]>=0.31.1",
    "httpx>=0.28.1",
    "websockets>=12.0",
    "python-dateutil>=2.8.2"
]

