[project]
name = "mcp-customer-service-api"
version = "0.1.0"
description = "MCP server for customer service API tools - connects to FastAPI backend"
dependencies = [
    "fastmcp==0.0.1",
    "httpx==0.25.2",
    "pydantic==2.5.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
