[project]
name = "gmail-mcp"
version = "0.1.0"
description = "Gmail MCP server client"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.13.0",
    "websockets>=12.0",
    "uvicorn[standard]>=0.31.1",
    "google-api-python-client>=2.164.0",
    "google-auth>=2.38.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.4.1",
]
