[project]
name = "macos-mcp-client"
version = "0.1.0"
description = "Macos MCP client for desktop interaction through FastAPI backend"
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "click",
    "requests",
    "anthropic",
]

[project.scripts]
windows-mcp-client = "mcp_server:main"

