[project]
name = "mcp-server-snowflake-local"
version = "0.1.0"
description = "Snowflake MCP server (local, no OAuth) with PostgreSQL and FAISS/simple search"
requires-python = ">=3.10"
dependencies = [
  "fastmcp>=2.13.0",
  "mcp[cli]>=1.4.1",
  "numpy>=1.26.0",
  "psycopg[binary]>=3.2.0",
  # Optional: FAISS CPU, may fail on some platforms. Use SEARCH_MODE=simple if unavailable.
  "faiss-cpu>=1.7.4; platform_machine != 'aarch64'",
  "openai>=1.0.0",
  "uvicorn[standard]>=0.31.1",
]

[project.scripts]
snowflake-mcp = "main:main"


