[project]
name = "whatsapp-mcp-server"
version = "0.1.0"
description = "WhatsApp MCP server - thin HTTP client proxying to the Contacts ENV API"
requires-python = ">=3.10"
dependencies = [
  "fastmcp>=2.13.0,<3.0.0",
  "mcp>=1.2.0,<2.0.0",
  "httpx>=0.27.0,<1.0.0",
]

[tool.uv]
dev-dependencies = []

