[project]
name = "windows-mcp-server"
version = "0.1.0"
description = "Windows MCP server for desktop interaction through FastAPI backend"
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "click",
    "requests",
    "anthropic",
]

[project.scripts]
windows-mcp-server = "mcp_server:main"

